connexion se fait grace au controller et plus au modele. toutes les fonctions de modifications d'un clients sont finies et fonctionnelles. bdd mise a jour aussi. renvoie d'une chaine de caractere à integrer de votre cote dans les messages